2022-10-10T00:43:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3216168778
* notice: last 14d: unq all: 4 5645
* notice: prev accum: outdated-unq outdated-all / unq all: 1091 69808 / 1121 75390
* notice: next accum: outdated-unq outdated-all / unq all: 1093 70218 / 1121 75863
* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -18 / +2 +408 -0 -0 / 2 408
* notice: removed / changed dates: [2022-09-25] / [2022-09-26 2022-10-09]

2022-10-09T16:07:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3214745995
* notice: last 14d: unq all: 4 5582
* notice: prev accum: outdated-unq outdated-all / unq all: 1091 69808 / 1120 75414
* notice: next accum: outdated-unq outdated-all / unq all: 1091 69808 / 1121 75390
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -0 -146 / +2 +260 -0 -0 / 2 260
* notice: removed / changed dates: [] / [2022-09-25 2022-10-09]

2022-10-09T08:08:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3213420493
* notice: last 14d: unq all: 4 5606
* notice: prev accum: outdated-unq outdated-all / unq all: 1091 69808 / 1119 75453
* notice: next accum: outdated-unq outdated-all / unq all: 1091 69808 / 1120 75414
* notice: prev exec diff / last date diff / accum: unq all: +1 +138 -0 -177 / +1 +138 -0 -0 / 1 138
* notice: removed / changed dates: [] / [2022-09-25 2022-10-09]

2022-10-09T00:36:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3212332538
* notice: last 14d: unq all: 4 5645
* notice: prev accum: outdated-unq outdated-all / unq all: 1089 69398 / 1117 74979
* notice: next accum: outdated-unq outdated-all / unq all: 1091 69808 / 1119 75453
* notice: prev exec diff / last date diff / accum: unq all: +2 +151 -0 -20 / +3 +410 -0 -0 / 3 410