@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-10-10T08:13:49Z",
+  "count" : 136,
+  "count_minmax" : [ 136, 136 ],
+  "count_decinc" : [ -0, +136 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
