@@ -1,11 +1,11 @@
 {
-  "count": 5645,
+  "count": 5603,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-09-26T00:00:00Z",
-      "count": 389,
-      "uniques": 3
+      "count": 211,
+      "uniques": 2
     },
     {
       "timestamp": "2022-09-27T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 408,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-10T00:00:00Z",
+      "count": 136,
+      "uniques": 1
     }
   ]
 }
