@@ -1,3 +1,11 @@
+2022-10-10T08:13:49Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217795796
+* notice: last 14d: unq all: 4 5603
+* notice: prev accum: outdated-unq outdated-all / unq all: 1093 70218 / 1121 75863
+* notice: next accum: outdated-unq outdated-all / unq all: 1093 70218 / 1121 75821
+* notice: prev exec diff / last date diff / accum: unq all: +1 +136 -1 -178 / +1 +136 -0 -0 / 1 136
+* notice: removed / changed dates: [] / [2022-09-26 2022-10-10]
+
 2022-10-10T00:43:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3216168778
 * notice: last 14d: unq all: 4 5645
